# ann-churn-prediction

./: .gitignore  main.py  pyproject.toml
notebooks/: experimentation.ipynb  model.h5  model.keras  ohe_encoder.pkl  prediction.ipynb
notebooks/logs/fit/2025_07_17-16_02_13/train/: events.out.tfevents.1752789733.BL-ricardo-rojas-JRXYFDH72F.85322.0.v2
notebooks/logs/fit/2025_07_17-16_02_13/validation/: events.out.tfevents.1752789733.BL-ricardo-rojas-JRXYFDH72F.85322.1.v2
