[project]
name = "ann-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
]
